--- a/index.html
+++ b/index.html
@@ -453,7 +453,6 @@ Contact Number,,,,,,,,
             "Elder Flower": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Elder%20Flower.jpg?raw=true",
             "Ginger Peach": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Ginger%20Peach.jpg?raw=true",
             "Green Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Green%20Tea.jpg?raw=true", 
-            "Organic Ginger Root": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Organic%20Ginger%20Root.jpg?raw=true",
             "Hawthorn": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hawthorn.jpg?raw=true",
             "Lavender": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Lavender.jpg?raw=true",
             "Hibiscus Zest": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus%20Zest.jpg?raw=true",
@@ -479,6 +478,8 @@ Contact Number,,,,,,,,
             "Triple Berry Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Triple%20Berry%20Tea.jpg?raw=true",
             "Chai Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Chai%20Tea.jpg?raw=true",
             "Hibiscus Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus%20Tea.jpg?raw=true",
+            "Organic Ginger Root": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Organic%20Ginger%20Root.jpg?raw=true",
+            "Cinnamon Apricot Tisane": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/cinnamon_apricot_tea_1_1.jpg?raw=true",
                     
             // You can add more URLs here, like this:
             // "Your Tea Name": "https://link-to-your-image.com/your-image.jpg",
