--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@ Elder Flower,"anti inflammatory, boosts immune system, diuretic, aids in helping
 Ginger Peach," Digestion, reduce inflammation, and boost immunity",3 oz,3.5,1,3.5,,,
 Green Tea,"improves blood flow, lowers blood",2 oz,3,,0,,,
 Hawthorn,Boosts immune system,2 oz,4,,0,,,
+Organic Ginger Root,"Help with nausea, digestion, and inflammation, potentially reducing pain and improving heart health",4 oz,,,
 Lavender:,"relieves insomnia, indigestion, convulsi",1.5 oz,5,1,5,,,
 Hibiscus Tea,"blood pressure, reduce cholesterol levels, and potentially aid in weight management",1.5 oz,4,,0,,,
 Hibiscus Zest," heart health, weight management, promoting liver health, and blood & blood sugar levels.",2 oz,5,,0,,,
@@ -372,6 +373,7 @@ Jasmine,"Antioxidant, improve digestion, Blood Pressure, Heart Health",3 oz,5,,0
 Lemon Grass," helps digestion, blood pressure bots Ae ad zt Le",1 oz,3,,0,,,
 Licorice Root,"Strengthens body, use as detox",2 oz ,4,,0,,,
 Mullein Leaf,"helps asthma, copd, recurring congestion, smokers cough",1 oz,5,,0,,,
+Organic Ginger Root,"Antioxidant, improve digestion, Blood Pressure, Heart Health",3 oz,5,,0,,,
 Organic Jasmine,"Antioxidant, improve digestion, Blood Pressure, Heart Health",2 oz,5,,0,,,
 Orange Spice Cinnamon,"immune system, improve digestion, and potentially aid in blood sugar regulation",2 oz,4,,0,,,
 Passion Fruit," stress, anxiety, and insomnia, as well as potential immune system support",2 oz,5,,0,,,
@@ -383,7 +385,6 @@ Triple Berry Tea," antioxidants,  blood sugar and insulin response,  anti-inflam
 Winter Blend Tea,"warmth, comfort, and supporting overall well-being ",3 oz,5,,0,,,
 Spearmint Leaf,Has antimicrobial,1 oz,4,,0,,,
 Yerba Mate,full of antioxidants,2 oz,5,,0,,,
-Organic Ginger Root,"Help with nausea, digestion, and inflammation, potentially reducing pain and improving heart health",4 oz,,,
 
 ,,,,TOTAL QUANTITY,True,,,
 ,,,,MARKUP,3.4000000000000004,,,
@@ -454,6 +455,7 @@ Contact Number,,,,,,,,
             "Ginger Peach": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Ginger%20Peach.jpg?raw=true",
             "Green Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Green%20Tea.jpg?raw=true", 
             "Hawthorn": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hawthorn.jpg?raw=true",
+            "Organic Ginger Root": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Organic%20Ginger%20Root.jpg?raw=true",
             "Lavender": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Lavender.jpg?raw=true",
             "Hibiscus Zest": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus%20Zest.jpg?raw=true",
             "Burdock": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Burdock.jpg?raw=true",
@@ -479,7 +481,6 @@ Contact Number,,,,,,,,
             "Chai Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Chai%20Tea.jpg?raw=true",
             "Hibiscus Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus%20Tea.jpg?raw=true",
             "Organic Ginger Root": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Organic%20Ginger%20Root.jpg?raw=true",
-            "Cinnamon Apricot Tisane": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/cinnamon_apricot_tea_1_1.jpg?raw=true",
                     
             // You can add more URLs here, like this:
             // "Your Tea Name": "https://link-to-your-image.com/your-image.jpg",
